# eth_crawler

./: .env_example  .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: errors.rs  eth_api.rs  helpers.rs  lib.rs  validators.rs
api/templates/: index.html.tera  layout.html.tera  new.html.tera
entity/: Cargo.toml
entity/src/: transactions.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20230913_132440_create_transactions_table.rs
service/: Cargo.toml
service/src/: mutation.rs  query.rs
