[package]
name = "actix-example-api"
version = "0.1.0"
authors = ["Arsen Kondratiev <arsen.kondratiev@protonmail.com>"]
edition = "2021"
publish = false

[dependencies]
actix-example-service = { path = "../service" }
actix-files = "0.6"
actix-http = "3"
actix-rt = "2.8"
actix-service = "2"
actix-web = "4"
tera = "1.19.0"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
listenfd = "1"
serde = "1"
eth-address = "0.1.0"
derive_more = "0.99.17"
lazy_static = "1.4.0"
chrono = "0.4.30"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
entity = { path = "../entity" }
migration = { path = "../migration" }
